[package]
name = "hello-wasm"
version = "0.1.0"
authors = ["HoLam <holam9120@gmail.com>"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/lamdan0901/hello-wasm"
edition = "2018"

[profile.release]
lto = true
panic = 'abort'
codegen-units = 1
opt-level = 'z'

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = ['-O']

[package.metadata.wasm-pack.profile.profiling.wasm-bindgen]
debug-js-glue = false
demangle-name-section = true
dwarf-debug-info = false

[dependencies]
wasm-bindgen = { version = "0.2.82", features = ["serde-serialize"]  }
# js-sys = "0.3.59"
wasm-bindgen-futures = "0.4.32"
libaes = "0.6.2"
# serde = { version = "1.0.80", features = ["derive"] }
# serde_derive = "^1.0.59"
# serde_json = "1.0.83"

# [dependencies.web-sys]
# version = "0.3.4"
# features = [
#   'Headers',
#   'Request',
#   'RequestInit',
#   'RequestMode',
#   'Response',
#   'Window',
#   "console",
# ]